--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trishchuk/codex-mcp-tool",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "MCP server for Codex CLI integration",
   "type": "module",
   "main": "dist/index.js",
@@ -54,10 +54,12 @@
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.6.1",
+    "cross-spawn": "^7.0.6",
     "zod": "^3.25.76",
     "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.6",
     "@types/inquirer": "^9.0.0",
     "@types/node": "^18.19.124",
     "archiver": "^7.0.1",
